--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 // 2.Variable defaults 추가
 // Required
-@import "../../node_modules/bootstrap/scss/functions";
+// @import "../../node_modules/bootstrap/scss/functions";
 
 // Default variable overrides 
 // 2-1. 재정의 내용 작성
@@ -16,6 +16,7 @@ $container-max-widths: (
 
 
 // Required
+@import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/root";
